# libSTARK

./: CMakeLists.txt  Makefile
libstark-tests/: AcspWitnessChecker_UTEST.cpp  BairWitnessChecker_UTEST.cpp  BairWitnessChecker_UTEST.hpp  MerkleCommitment_UTEST.cpp
libstark-tests/BairToAcsp/: AcspSummandsPolynomial_UTEST.cpp  RoutingNetworks_UTEST.cpp  boundaryConstraints_UTEST.cpp  constraints_UTEST.cpp  neighborsConstructor_UTES.cpp  witnessReduction_UTEST.cpp
libstark-tests/lightCircLib/: lightCircGate.hpp
libstark/src/common/Algebra/: LinearSpace.cpp
libstark/src/languages/Acsp/: AcspInstance.hpp  AcspWitnessChecker.cpp
libstark/src/languages/Bair/: BairInstance.hpp  BairWitness.hpp  BairWitnessChecker.cpp
libstark/src/protocols/: protocol.cpp  protocol.hpp
libstark/src/protocols/Ali/: prover.cpp  prover.hpp  verifier.cpp  verifier.hpp
libstark/src/protocols/Ali/common_details/: common.hpp
libstark/src/protocols/Ali/verifier_details/: queriesGen.hpp
libstark/src/protocols/Fri/: prover.cpp  prover.hpp  verifier.cpp  verifier.hpp
libstark/src/protocols/Fri/common/: common.hpp
libstark/src/protocols/Fri/verifier_details/: queryGenerator.cpp  queryGenerator.hpp
libstark/src/protocols/common/: proofs.cpp  proofs.hpp  verifier.hpp
libstark/src/protocols/common/CryptoCommitment/: MerkleCommitment.cpp
libstark/src/reductions/BairToAcsp/: BairToAcsp.cpp  BairToAcsp.hpp
libstark/src/reductions/BairToAcsp/Details/: AcspSummandsPolynomial.cpp  AcspSummandsPolynomial.hpp  commonDeffinitions.hpp  commonInformation.hpp  witnessReduction.cpp  witnessReduction.hpp
libstark/src/reductions/BairToAcsp/Routing/: BenesNetwork.cpp  BenesNetwork.hpp  DeBruijnPermutationNet.cpp  LongDeBruijnPermutationNet.cpp  LongSymmetricDeBruijnNetwork.cpp  PermutationRoutingNet.hpp  RoutingNetwork.hpp  TandemNetwork.cpp
prevstarkdpm/: LOCI_AES160hashchain.hpp  LOCI_AES160hashchain_constraints.cpp  LOCI_AES160hashchain_instance.hpp  LOCI_AES160hashchain_witness.cpp  main.cpp
starkdpm/: AES160hashcLOCI.hpp  AES160hashcLOCI_constraints.cpp  AES160hashcLOCI_instance.hpp  AES160hashcLOCI_witness.cpp  main.cpp
tinyram/gadgetlib/gadgetlib/: common_use.cpp  common_use.hpp  gadget.cpp  gadget.hpp  infrastructure.cpp  protoboard.cpp  protoboard.hpp
tinyram/gadgetlib/gadgetlib/SHA/: sha2.hpp
tinyram/gadgetlib/gadgetlib/examples/: tutorial.cpp
tinyram/stark-tinyram-tests/: ALUInputConsistenctUTEST.cpp  ALU_UTEST.cpp  ConstraintsSystem2Bair_UTEST.cpp  generalPupose_UTEST.cpp  memory_UTEST.cpp  programs_UTEST.cpp  traceConsistencyUTEST.cpp  transitionFunctionUTEST.cpp
tinyram/stark-tinyram/src/: main.cpp
tinyram/stark-tinyram/src/TinyRAM/: TinyRAMDefinitions.hpp  TinyRAMInstance.hpp
tinyram/stark-tinyram/src/TinyRAMtoBair/ConstraintSystemToBair/: cs2Bair.hpp
tinyram/stark-tinyram/src/TinyRAMtoBair/RamToContraintSystem/: ALU.cpp  ALU.hpp  ALUInputConsistency.hpp  MemoryConsraints.cpp  MemoryConsraints.hpp  generalPurpose.hpp  traceConsistency.hpp  transitionFunction.hpp
